# gemini-driven-pdf2md

./: .coverage  .gitignore  GEMINI.md  LICENSE  README.md  batch_process.py  mcp_config.json  pyproject.toml  workflow_documentation.html
.github/workflows/: test.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: technical_deep_dive.md
output/benchmark/: report.md  results.json
output/benchmark_full_workflow/: report.md  results.json
output/benchmark_full_workflow_v2/: report.md  results.json
output/benchmark_retry/: report.md  results.json
output/cellpace/: cellpace_p0.md  cellpace_p1.md  cellpace_p10.md  cellpace_p11.md  cellpace_p12.md  cellpace_p13.md  cellpace_p14.md  cellpace_p15.md  cellpace_p16.md  cellpace_p17.md  cellpace_p18.md  cellpace_p19.md  cellpace_p2.md  cellpace_p20.md  cellpace_p21.md  cellpace_p22.md  cellpace_p23.md  cellpace_p24.md  cellpace_p25.md  cellpace_p26.md  cellpace_p27.md  cellpace_p28.md  cellpace_p29.md  cellpace_p3.md  cellpace_p30.md  cellpace_p31.md  cellpace_p4.md  cellpace_p5.md  cellpace_p6.md  cellpace_p7.md  cellpace_p8.md  cellpace_p9.md  raw_response_p0.txt  raw_response_p1.txt  raw_response_p10.txt  raw_response_p11.txt  raw_response_p12.txt  raw_response_p13.txt  raw_response_p14.txt  raw_response_p15.txt  (+25 more)
tests/: reproduce_issue.py  test_benchmark_loader.py  test_cli.py  test_extraction.py  test_extraction_bridge.py  test_gemini_client.py  test_mcp_server.py  test_profiler.py  test_prompts.py  test_registry.py  test_stream_pressure.py  test_utils.py
(+741 files in other folders)
