[project]
name = "gemini-driven-img2md"
version = "0.1.0"
description = "A tool to convert research paper PDFs to Markdown using Gemini vision."
authors = [
    {name = "Jay"}
]
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "google-generativeai (>=0.8.5,<0.9.0)",
    "typer (>=0.19.2,<0.20.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langgraph (>=1.0.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
